# file-send-easy

./: .dockerignore  .env.docker.example  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py  schemas.py  services.py
backend/data/: app.db
data/: app.db
frontend/: FileShare.vue  FileView.vue  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  main.js  style.css
frontend/src/lib/: api.js
frontend/src/views/: HomeView.vue  PickupView.vue
